# connect-four-core

./: .gitignore  CMakeLists.txt  build.sh  main  main.cpp
include/: connect-four.h
lib/: httplib.h
src/: conect-four-ai.cpp  connect-four-server.cpp  connect-four.cpp  main.cpp
